finish client adjustments
